[refactor] Sprout `SATOSA_IMAGE` variable in `.env`
Make it so `.env` is read both by `Makefile` (explicitly) and `docker-compose.yml` (implicitly)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ name: satosa
 
 services:
   satosa:
-    image: satosa:8
+    # The SATOSA_IMAGE variable is defined in the .env file:
+    image: ${SATOSA_IMAGE}
     command:
       - bash
       - -x
