--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - -x
       - /custom-entrypoint.sh
     environment:
-      - SATOSA_ENTITY_ID=https://tkgi-satosa.epfl.ch/tequila
+      - SATOSA_ENTITY_ID=https://tkgi-satosa.epfl.ch/tequila  # Cheating! But it works 🤷
       # - SATOSA_BASE_URL=https://tkgi-satosa.epfl.ch/tequila
     volumes:
       - ./custom-entrypoint.sh:/custom-entrypoint.sh:ro
