--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - ./proxy_conf.yaml:/proxy_conf.yaml:ro
       - ./site-python/epfl:/usr/local/lib/python3.11/site-packages/epfl:ro
       - ./tls:/tls:ro
+      # - "/Users/quatrava/Library/Application Support/JetBrains/IntelliJIdea2023.1/plugins/python/debugger-eggs-output/pydevd-pycharm.egg:/pydevd-pycharm.egg:ro"
     ports:
       # We must be visible to browsers at port 443, as these days
       # Tequila doesn't belive in redirecting, nor POSTing, to any
