[refactor] for Kubernetes ConfigMap-friendliness
- Self-descriptive file names
- Support for a `/attributemaps` directory

This will make it easier to cram everything into a single `ConfigMap` when running under Kubernetes.

--- a/config/tequila_require_microservice.yaml
+++ b/config/tequila_require_microservice.yaml
@@ -1,5 +1,5 @@
 # Microservice configuration file for SATOSA
-module: epfl.micro_services.tequila.TequilaRequire
+module: epfl.micro_services.TequilaRequire
 name: TequilaRequire
 config:
     all_your_base:
