--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - /custom-entrypoint.sh
     environment:
       - DEBUG_DISABLE_GUNICORN_TIMEOUTS=1
+      - PYTHONPATH=/site-python
       - SATOSA_ENTITY_ID=https://tkgi-satosa.epfl.ch/tequila  # Cheating! But it works 🤷
       # - SATOSA_BASE_URL=https://tkgi-satosa.epfl.ch/tequila
     volumes:
@@ -22,7 +23,7 @@ services:
       - ./config/attributemaps:/attributemaps:ro
       - ./data:/data:ro
       - ./proxy_conf.yaml:/proxy_conf.yaml:ro
-      - ./site-python/epfl:/usr/local/lib/python3.11/site-packages/epfl:ro
+      - ./site-python/epfl:/site-python/epfl:ro
       - ./tls:/tls:ro
       # - "/Users/quatrava/Library/Application Support/JetBrains/IntelliJIdea2023.1/plugins/python/debugger-eggs-output/pydevd-pycharm.egg:/pydevd-pycharm.egg:ro"
     ports:
