--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - ./config:/config:ro
       - ./config/attributemaps:/attributemaps:ro
       - ./data:/data:ro
-      - ./proxy_conf.yaml:/proxy_conf.yaml:ro
+      - ./config/proxy_conf.yaml:/proxy_conf.yaml:ro
       - ./site-python/epfl:/site-python/epfl:ro
       - ./tls:/tls:ro
       # - "/Users/quatrava/Library/Application Support/JetBrains/IntelliJIdea2023.1/plugins/python/debugger-eggs-output/pydevd-pycharm.egg:/pydevd-pycharm.egg:ro"
