[feature] Support for passing groups to OIDC
This obviously requires that the client requests them (e.g. using `scope="openid profile email tequila"`)

- Parse the comma-separated `group` attribute that Tequila returns
- Map it to OpenID-Connect in `INTERNAL_ATTRIBUTES`
- Teach `_arrayify_values` to avoid double-arrayifying

--- a/config/proxy_conf.yaml
+++ b/config/proxy_conf.yaml
@@ -25,6 +25,9 @@ INTERNAL_ATTRIBUTES:
     lastname:
       openid: [name]
 
+    group:
+      openid: [groups]
+
 STATE_ENCRYPTION_KEY: !ENV STATE_ENCRYPTION_KEY
 BACKEND_MODULES:
   - module: epfl.tequila_backend.TequilaBackend
