[feature] Mirror the base image to an OpenShift `ImageStream`
Introduce `hasOpenShiftBuilds` custom macro for the relevant feature check.

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,6 +5,9 @@
 replicaCount: 1
 
 image:
+  base:
+    name: satosa
+    version: 8
   repository: nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
