[refactor] Avoid `sed`ding stuff at startup
Rather, use SATOSA's built-in `!ENV` YAML transform for 12-factor purposes.

--- a/config/proxy_conf.yaml
+++ b/config/proxy_conf.yaml
@@ -1,5 +1,5 @@
 # Main configuration file for SATOSA
-BASE: https://satosa-127-0-0-1.nip.io
+BASE: !ENV SATOSA_BASE_URL
 COOKIE_STATE_NAME: "SATOSA_STATE"
 
 cookies_samesite_compat:
