[feature] Try and read `extra_id_token_claims` from the client database
- Introduce and use `epfl.oidc_frontend.OpenIDConnectFrontend`, a subclass of `satosa.frontends.openid_connect.OpenIDConnectFrontend`
- Have it override `_get_extra_id_token_claims` to frob from `self.provider.clients` as a secondary data source w.r.t. the main config file (which is still queried by calling the superclass)

--- a/config/proxy_conf.yaml
+++ b/config/proxy_conf.yaml
@@ -36,7 +36,7 @@ BACKEND_MODULES:
 
 FRONTEND_MODULES:
   - # OpenID-Connect frontend (app-facing) configuration
-    module: satosa.frontends.openid_connect.OpenIDConnectFrontend
+    module: epfl.oidc_frontend.OpenIDConnectFrontend
     name: OIDC
     config:
       provider:
