[refactor] `helm/values.yml` for cloud build support
`.Values.image.base.*` → `.Values.image.build.from.*`

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,9 +5,10 @@
 replicaCount: 1
 
 image:
-  base:
-    name: satosa
-    version: 8
+  build:
+    from:
+      name: satosa
+      version: 8
   repository: nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
