[fix] Service account needs access to Quay to pull the image
- Introduce `hasQuayBridge` helper
- When true, copy `imagePullSecrets` from the `default` serviceAccount to the one we create

--- a/helm/templates/serviceaccount.yaml
+++ b/helm/templates/serviceaccount.yaml
@@ -10,4 +10,10 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
+{{- if eq "true" (include "hasOpenShiftBuilds" .) }}
+imagePullSecrets:
+{{ range $index, $secret := (lookup "v1" "ServiceAccount" .Release.Namespace "default").imagePullSecrets }}
+- name: {{ $secret.name }}
+{{- end }}
+{{- end }}
 {{- end }}
