--- a/helm/templates/tests/test-connection.yaml
+++ b/helm/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "satosa-tequila.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "satosa-tequila.fullname" . }}:8080' ]
   restartPolicy: Never
