[feature] Have SATOSA encrypt traffic in-cluster
- Leverage OpenShift's [service encryption feature](https://docs.openshift.com/container-platform/4.15/security/certificates/service-serving-certificate.html) to avoid having to handle the TLS key material ourselves
- Change `make` targets and filename expectations in `custom-entrypoint.sh` to match (in development) those that OpenShift provides (in production)

--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -4,12 +4,15 @@ metadata:
   name: {{ include "satosa-tequila.fullname" . }}
   labels:
     {{- include "satosa-tequila.labels" . | nindent 4 }}
+  annotations:
+    # OpenShift can create TLS key pairs as-a-service:
+    service.beta.openshift.io/serving-cert-secret-name: satosa-tequila-service-tls
 spec:
   type: ClusterIP
   ports:
-    - port: 80
-      targetPort: http
+    - name: https
+      port: 443
+      targetPort: https
       protocol: TCP
-      name: http
   selector:
     {{- include "satosa-tequila.selectorLabels" . | nindent 4 }}
